--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,18 +19,18 @@ documentation = "https://masterblasterpy.readthedocs.io/en/latest/"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-aiohttp = "^3.8.5"
-python-dateutil = "^2.8.2"
+aiohttp = "^3.10.1"
+python-dateutil = "^2.9.0.post0"
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^7.4.2"
-pytest-cov = "^4.1.0"
+pytest = "^8.3.2"
+pytest-cov = "^5.0.0"
 jupyter = "^1.0.0"
-sphinx-autoapi = "^2.1.1"
-myst-nb = "^0.17.2"
+sphinx-autoapi = "^3.2.1"
+myst-nb = "^1.1.1"
 pydata-sphinx-theme = "^0.13.3"
-python-semantic-release = "^8.0.8"
-python-dotenv = "^1.0.0"
+python-semantic-release = "^9.8.6"
+python-dotenv = "^1.0.1"
 pytest-asyncio = "^0.21.1"
 
 [tool.semantic_release]
